--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "@sentry/react": "^10.22.0",
     "@sentry/vite-plugin": "^4.5.0",
     "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
