--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@sentry/vite-plugin": "^4.5.0",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@types/react-window": "^1.8.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -46,6 +47,7 @@
     "react-error-boundary": "^6.0.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.9.4",
+    "react-window": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
