--- a/package.json
+++ b/package.json
@@ -33,54 +33,64 @@
     "docker:clean": "docker-compose down && docker system prune -f"
   },
   "dependencies": {
-    "@sentry/react": "^10.22.0",
-    "@sentry/vite-plugin": "^4.5.0",
-    "@tanstack/react-query": "^5.90.5",
+    "@sentry/react": "^8.39.0",
+    "@sentry/vite-plugin": "^2.22.6",
+    "@tanstack/react-query": "^5.62.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.0",
-    "lucide-react": "^0.548.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.9.4",
-    "tailwind-merge": "^3.3.1",
-    "zustand": "^5.0.8"
+    "lucide-react": "^0.460.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
+    "react-router-dom": "^6.28.1",
+    "tailwind-merge": "^2.5.4",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/react-vite": "^8.6.14",
-    "@storybook/test": "^8.6.14",
-    "@tailwindcss/postcss": "^4.1.16",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "@vitest/ui": "^4.0.3",
-    "autoprefixer": "^10.4.21",
-    "cypress": "^15.5.0",
-    "eslint": "^9.38.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "jsdom": "^27.0.1",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "storybook": "^8.6.14",
-    "tailwindcss": "^4.1.16",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7",
-    "vite-plugin-pwa": "^1.1.0",
-    "vitest": "^4.0.3"
+    "@eslint/js": "^9.15.0",
+    "@sentry/vite-plugin": "^2.22.6",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/ui": "^2.1.4",
+    "autoprefixer": "^10.4.20",
+    "cypress": "^13.15.2",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "jsdom": "^25.0.1",
+    "postcss": "^8.4.49",
+    "prettier": "^3.3.3",
+    "storybook": "^8.4.7",
+    "tailwindcss": "^4.0.0",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^6.0.1",
+    "vite-plugin-pwa": "^0.21.1",
+    "vitest": "^2.1.4"
+  },
+  "overrides": {
+    "vite-plugin-pwa": {
+      "workbox-build": "^7.1.1"
+    }
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
