--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
-    "@vitest/ui": "^2.1.4",
+    "@vitest/coverage-v8": "^4.0.6",
+    "@vitest/ui": "^4.0.6",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.15.2",
     "eslint": "^9.15.0",
@@ -82,7 +83,7 @@
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1",
     "vite-plugin-pwa": "^0.21.1",
-    "vitest": "^2.1.4"
+    "vitest": "^4.0.6"
   },
   "overrides": {
     "vite-plugin-pwa": {
